--- a/MyBlog/src/main/resources/application.properties
+++ b/MyBlog/src/main/resources/application.properties
@@ -1,18 +1,9 @@
-#±¾µØ²âÊÔ
+# 
+# 数据库地址 
 spring.datasource.url=jdbc:mysql://10.7.131.84:3306/imagedata4_uat?useUnicode=true&characterEncoding=utf-8&useSSL=false
-spring.redis.host=localhost
-
-#ÉÏÏß»·¾³
-#spring.datasource.url=jdbc:mysql://ipµØÖ·:3306/myblog?useUnicode=true&characterEncoding=utf-8
-#spring.redis.host=ipµØÖ·
-#server.ssl.key-store=classpath:1838368_www.zhyocean.cn.pfx
-#server.ssl.key-store-password=ÕâÀïÌîÖ¤ÊéµÄÃÜÂë
-#server.ssl.keyStoreType=PKCS12
-
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=imagedb_uat
 spring.datasource.password=ZtNb*6HyD
-
 server.port=8888
 banner.charset=UTF-8
 server.tomcat.uri-encoding=UTF-8
@@ -21,55 +12,50 @@ spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 spring.messages.encoding=UTF-8
 
-#pagehelper²å¼þ
+#pagehelper插件
 pagehelper.helper-dialect=mysql
 pagehelper.reasonable=true
 pagehelper.support-methods-arguments=true
 pagehelper.params=count
 
-#´òÓ¡sqlÓï¾ä
-#logging.level.com.lk.mapper.TagMapper=debug
+#打印sql语句
+logging.level.com.lk.mapper.TagMapper=debug
 
 #thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=LEGACYHTML5
+ 
 
-#redisÅäÖÃ
-spring.redis.password=root
-spring.redis.database=0
-spring.redis.port=6379
-spring.redis.timeout=5000
-
-#faviconÉèÖÃ
+#favicon设置
 spring.mvc.favicon.enabled=false
 
-#ÎÄ¼þÉÏ´«ÏÞÖÆ
+#文件上传限制
 spring.http.multipart.maxFileSize=10Mb
 spring.http.multipart.maxRequestSize=10Mb
 
-######################### DruidÁ¬½Ó³ØµÄÅäÖÃÐÅÏ¢  #################
+######################### Druid连接池的配置信息  #################
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.initial-size=5
 spring.datasource.druid.min-idle=5
 spring.datasource.druid.max-active=20
-# ÅäÖÃ»ñÈ¡Á¬½ÓµÈ´ý³¬Ê±µÄÊ±¼ä
+# 配置获取连接等待超时的时间
 spring.datasource.druid.max-wait=60000
-# ÅäÖÃ¼ä¸ô¶à¾Ã²Å½øÐÐÒ»´Î¼ì²â£¬¼ì²âÐèÒª¹Ø±ÕµÄ¿ÕÏÐÁ¬½Ó£¬µ¥Î»ÊÇºÁÃë
+# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
 spring.datasource.druid.time-between-eviction-runs-millis=60000
-# ÅäÖÃÒ»¸öÁ¬½ÓÔÚ³ØÖÐ×îÐ¡Éú´æµÄÊ±¼ä£¬µ¥Î»ÊÇºÁÃë
+# 配置一个连接在池中最小生存的时间，单位是毫秒
 spring.datasource.druid.min-evictable-idle-time-millis=300000
-#¼ì²âÁ¬½ÓÊÇ·ñÓÐÐ§µÄsql
+# 检测连接是否有效的sql
 spring.datasource.druid.validation-query=SELECT 'x'
 spring.datasource.druid.test-while-idle=true
 spring.datasource.druid.test-on-borrow=false
 spring.datasource.druid.test-on-return=false
-# PSCache MysqlÏÂ½¨Òé¹Ø±Õ
+# PSCache Mysql下建议关闭
 spring.datasource.druid.pool-prepared-statements=false
 spring.datasource.druid.max-pool-prepared-statement-per-connection-size=-1
-# ÅäÖÃ¼à¿ØÍ³¼ÆÀ¹½ØµÄfilters£¬È¥µôºó¼à¿Ø½çÃæsqlÎÞ·¨Í³¼Æ£¬'wall'ÓÃÓÚ·À»ðÇ½
+# 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
 spring.datasource.druid.filters=stat,wall,log4j
 
-# ÅäÖÃWallFilte.
+# 配置WallFilte
 #spring.datasource.druid.filter.wall.enabled=true
 #spring.datasource.druid.filter.wall.db-type=mysql
 #spring.datasource.druid.filter.wall.config.delete-allow=false
