--- a/MyBlog/src/main/resources/application.properties
+++ b/MyBlog/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 # 
 # 数据库地址 
-spring.datasource.url=jdbc:mysql://10.7.131.84:3306/imagedata4_uat?useUnicode=true&characterEncoding=utf-8&useSSL=false
+spring.datasource.url=jdbc:mysql://182.92.185.169:3306/myblog?useUnicode=true&characterEncoding=utf-8&useSSL=false
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/myblog?useUnicode=true&characterEncoding=utf-8&useSSL=false
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=imagedb_uat
-spring.datasource.password=ZtNb*6HyD
+spring.datasource.username=root
+spring.datasource.password=root
 server.port=8888
 banner.charset=UTF-8
 server.tomcat.uri-encoding=UTF-8
